--- a/XFramework.Site.Home/Areas/PagesAdmin/Views/Account/SetPwd.cshtml
+++ b/XFramework.Site.Home/Areas/PagesAdmin/Views/Account/SetPwd.cshtml
@@ -10,30 +10,33 @@
         <div class="success">@Html.Raw(ViewBag.Msg)</div>
     }
     <form method="post" action="" class="form-horizontal">
-      <div class="form-group">
-        <label  class="col-sm-2 control-label">原始密码：</label>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">
+            原始密码：</label>
         <div class="col-sm-10">
-            @Html.Password("txtoldPwd",null,new { placeholder = "原始密码", @class = "form-control" })
+            @Html.Password("txtoldPwd", null, new { placeholder = "原始密码", @class = "form-control" })
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-2 control-label">新密码：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">
+            新密码：</label>
         <div class="col-sm-10">
-           @Html.Password("txtNewPwd",null, new { placeholder = "新密码", @class = "form-control" })
-           注：密码至少六位字符
+            @Html.Password("txtNewPwd", null, new { placeholder = "新密码", @class = "form-control" })
+            注：密码至少六位字符
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-2 control-label">确认新密码：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">
+            确认新密码：</label>
         <div class="col-sm-10">
-            @Html.Password("txtNewConfirmPwd",null, new { placeholder = "确认新密码", @class = "form-control" })
+            @Html.Password("txtNewConfirmPwd", null, new { placeholder = "确认新密码", @class = "form-control" })
         </div>
-      </div>       
-      <div class="form-group">
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-primary">保存</button>
+            <button type="submit" class="btn btn-primary">
+                保存</button>
         </div>
-      </div>
+    </div>
     </form>
 </fieldset>
-
