--- a/XFramework.Site.Home/Areas/PagesAdmin/Views/Article/Add.cshtml
+++ b/XFramework.Site.Home/Areas/PagesAdmin/Views/Article/Add.cshtml
@@ -11,91 +11,93 @@
 }
 <fieldset>
     <legend>@(isAdd ? "新增" : "编辑")文章</legend>
-    <form method="post"  class="form-horizontal">
+    <form method="post" class="form-horizontal">
     @Html.ValidationSummary()
     @if (ViewBag.Msg != null)
     {
         <div class="success">@Html.Raw(ViewBag.Msg)</div>
     }
     <div class="form-group">
-        <label for="inputEmail3" class="col-sm-1 control-label">分类：</label>
+        <label for="inputEmail3" class="col-sm-1 control-label">
+            分类：</label>
         <div class="col-sm-11">
-        @Html.Raw(XFramework.Site.PagesAdmin.Models.DropdownHelper.RenderCategoryListWithOptGroup("CategoryId", Model.CategoryId))
+            @Html.Raw(XFramework.Site.PagesAdmin.Models.DropdownHelper.RenderCategoryListWithOptGroup("CategoryId", Model.CategoryId))
         </div>
-      </div>
-      <div class="form-group">
-        <label  class="col-sm-1 control-label">标题：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-1 control-label">
+            标题：</label>
         <div class="col-sm-11">
-            @Html.TextBoxFor(m => m.Title, new { placeholder = "文章标题", @class="form-control"})
+            @Html.TextBoxFor(m => m.Title, new { placeholder = "文章标题", @class = "form-control" })
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-1 control-label">内容：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-1 control-label">
+            内容：</label>
         <div class="col-sm-11">
-           @Html.TextAreaFor(m => m.Content, new { style = "width:100%;" })
+            @Html.TextAreaFor(m => m.Content, new { style = "width:100%;" })
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-1 control-label">描述：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-1 control-label">
+            描述：</label>
         <div class="col-sm-11">
-          @Html.TextAreaFor(m => m.Remark, new { style = "width:90%;height:100px" })
+            @Html.TextAreaFor(m => m.Remark, new { style = "width:90%;height:100px" })
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-1 control-label">属性：</label>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-1 control-label">
+            属性：</label>
         <div class="col-sm-11">
             <div role="tabpanel">
-
-              <!-- Nav tabs -->
-              <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active">
-                    <a href="#tab-1" aria-controls="tab-1" role="tab" data-toggle="tab">发布时间</a></li>
-                <li role="presentation">
-                    <a href="#tab-2" aria-controls="tab-2" role="tab" data-toggle="tab">排序</a></li>
-                <li role="presentation">
-                    <a href="#tab-3" aria-controls="tab-3" role="tab" data-toggle="tab">关键词</a></li>
-                <li role="presentation">
-                    <a href="#tab-4" aria-controls="tab-4" role="tab" data-toggle="tab">快速链接</a></li>
-                <li role="presentation">
-                    <a href="#tab-5" aria-controls="tab-5" role="tab" data-toggle="tab">新闻图片</a></li>
-                <li role="presentation">
-                    <a href="#tab-6" aria-controls="tab-6" role="tab" data-toggle="tab">是否删除</a></li>
-                <li role="presentation">
-                    <a href="#tab-7" aria-controls="tab-7" role="tab" data-toggle="tab">是否置顶</a></li>
-              </ul>
-
-              <!-- Tab panes -->
-              <div class="tab-content">
-              <div role="tabpanel" class="tab-pane active" id="tab-1">
-                    @Html.TextBoxFor(m => m.PublishDateTime, new { @class = "form-control" })
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#tab-1" aria-controls="tab-1" role="tab"
+                        data-toggle="tab">发布时间</a></li>
+                    <li role="presentation"><a href="#tab-2" aria-controls="tab-2" role="tab" data-toggle="tab">
+                        排序</a></li>
+                    <li role="presentation"><a href="#tab-3" aria-controls="tab-3" role="tab" data-toggle="tab">
+                        关键词</a></li>
+                    <li role="presentation"><a href="#tab-4" aria-controls="tab-4" role="tab" data-toggle="tab">
+                        快速链接</a></li>
+                    <li role="presentation"><a href="#tab-5" aria-controls="tab-5" role="tab" data-toggle="tab">
+                        新闻图片</a></li>
+                    <li role="presentation"><a href="#tab-6" aria-controls="tab-6" role="tab" data-toggle="tab">
+                        是否删除</a></li>
+                    <li role="presentation"><a href="#tab-7" aria-controls="tab-7" role="tab" data-toggle="tab">
+                        是否置顶</a></li>
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="tab-1">
+                        @Html.TextBoxFor(m => m.PublishDateTime, new { @class = "form-control" })
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-2">
+                        @Html.TextBoxFor(m => m.Sort, new { @class = "form-control" })<span class="tip">数值越小，位置越靠前</span>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-3">
+                        @Html.TextBoxFor(m => m.Tags, new { @class = "form-control", placeholder = "关键词" })
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-4">
+                        @Html.TextBoxFor(m => m.LinkUrl, new { @class = "form-control", placeholder = "快速连接" })
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-5">
+                        @Html.TextBoxFor(m => m.ImageUrl, new { @class = "form-control" })&nbsp;&nbsp;<a href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=ImageUrl',400,100,200);">上传图片</a>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-6">
+                        @Html.CheckBoxFor(m => m.IsDeleted)是否删除
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="tab-7">
+                        @Html.CheckBoxFor(m => m.IsTop)是否置顶
+                    </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="tab-2">
-                    @Html.TextBoxFor(m => m.Sort, new { @class = "form-control" })<span class="tip">数值越小，位置越靠前</span>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="tab-3">
-                    @Html.TextBoxFor(m => m.Tags, new { @class = "form-control", placeholder = "关键词" })
-                </div>
-                <div role="tabpanel" class="tab-pane" id="tab-4">
-                    @Html.TextBoxFor(m => m.LinkUrl, new { @class = "form-control", placeholder = "快速连接" })
-                 </div>
-                <div role="tabpanel" class="tab-pane" id="tab-5">
-                    @Html.TextBoxFor(m => m.ImageUrl, new { @class = "form-control"})&nbsp;&nbsp;<a href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=ImageUrl',400,100,200);">上传图片</a>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="tab-6">
-                    @Html.CheckBoxFor(m => m.IsDeleted)是否删除
-                </div>
-                 <div role="tabpanel" class="tab-pane" id="tab-7">
-                    @Html.CheckBoxFor(m => m.IsTop)是否置顶
-                </div>
-              </div>
-
             </div>
         </div>
-      </div>    
-      <div class="form-group">
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-1 col-sm-11">
-          <button type="submit" class="btn btn-primary">@(isAdd ? "增加" : "更新")</button>
+            <button type="submit" class="btn btn-primary">@(isAdd ? "增加" : "更新")</button>
         </div>
-      </div>
+    </div>
     </form>
 </fieldset>
