--- a/XFramework.Site.Home/Areas/PagesAdmin/Views/Article/Add.cshtml
+++ b/XFramework.Site.Home/Areas/PagesAdmin/Views/Article/Add.cshtml
@@ -3,6 +3,10 @@
     Layout = "../Shared/_Layout.cshtml";
     ViewBag.Title = "添加或编辑文章";
     bool isAdd = Controleng.Common.CECRequest.GetQueryInt("id", 0) > 0 ? false : true;
+    int[] exceptIds = new int[]{
+        Convert.ToInt32(XFramework.Common.LanguageResourceHelper.GetString("product-category-root-id",XFramework.Model.WebLanguage.zh_cn)),
+        Convert.ToInt32(XFramework.Common.LanguageResourceHelper.GetString("product-category-root-id",XFramework.Model.WebLanguage.en))
+    };
 }
 @section header{
     <script type="text/javascript">
@@ -21,7 +25,7 @@
         <label for="inputEmail3" class="col-sm-1 control-label">
             分类：</label>
         <div class="col-sm-11">
-            @Html.Raw(XFramework.Site.PagesAdmin.Models.DropdownHelper.RenderCategoryListWithOptGroup("CategoryId", Model.CategoryId))
+            @Html.Raw(XFramework.Site.PagesAdmin.Models.DropdownHelper.RenderCategoryListWithOptGroup("CategoryId", Model.CategoryId, exceptIds))
         </div>
     </div>
     <div class="form-group">
