--- a/XFramework.Site.Home/Areas/PagesAdmin/Views/Product/Add.cshtml
+++ b/XFramework.Site.Home/Areas/PagesAdmin/Views/Product/Add.cshtml
@@ -18,46 +18,46 @@
         <div class="success">@Html.Raw(ViewBag.Msg)</div>
     }
     <div class="form-group">
-        <label class="col-sm-2 control-label">
+        <label class="col-sm-1 control-label">
             分类：</label>
-        <div class="col-sm-10">
+        <div class="col-sm-11">
             @Html.Raw(XFramework.Site.PagesAdmin.Models.DropdownHelper.RenaderProductDropdownList("CategoryId", Model.CategoryId))
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">
+        <label class="col-sm-1 control-label">
             标题：</label>
-        <div class="col-sm-10">
+        <div class="col-sm-11">
             @Html.TextBoxFor(m => m.Title, new { placeholder = "产品标题", @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">
+        <label class="col-sm-1 control-label">
             内容：</label>
-        <div class="col-sm-10">
+        <div class="col-sm-11">
             @Html.TextAreaFor(m => m.Content, new { style = "width:100%;" })
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">
-            产品小图：</label>
-        <div class="col-sm-10">
+        <label class="col-sm-1 control-label">
+            小图：</label>
+        <div class="col-sm-11">
             @Html.TextBoxFor(m => m.SImageUrl, new { placeholder = "产品小图", @class = "form-control" })<a
                 href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=SImageUrl',400,100,200);">上传图片</a>
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">
-            产品大图：</label>
-        <div class="col-sm-10">
+        <label class="col-sm-1 control-label">
+            大图：</label>
+        <div class="col-sm-11">
             @Html.TextBoxFor(m => m.BImageUrl, new { placeholder = "产品小图", @class = "form-control" })<a
                 href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=SImageUrl',400,100,200);">上传图片</a>
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">
+        <label class="col-sm-1 control-label">
             属性：</label>
-        <div class="col-sm-10">
+        <div class="col-sm-11">
             <div role="tabpanel">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-offset-2 col-sm-11">
             <button type="submit" class="btn btn-primary">@(isAdd ? "增加" : "更新")</button>
         </div>
     </div>
