--- a/XFramework.Site.Home/Areas/Front/Views/Shared/_ChannelLayout.cshtml
+++ b/XFramework.Site.Home/Areas/Front/Views/Shared/_ChannelLayout.cshtml
@@ -10,9 +10,9 @@
 <span class="box_10"></span>
 <div class="main">
     <div class="left_box">
-        <h2>
+        @*<h2>
             <img src="@ViewBag.RootCategoryInfo.BannerAdImageUrl" alt="@ViewBag.RootCategoryInfo.Name"/></h2>
-        <span class="box_10"></span>
+        <span class="box_10"></span>*@
         <ul class="about_list2">
             @Html.Action("SubCategoryListForChannelPage", "Channel", new { rootId = ViewBag.RootCategoryInfo.Id, selectedId = ViewBag.CurrentCategoryInfo.Id, language = PageData["Language"],url="/product/?cid={0}" })
         </ul>
