--- a/XFramework.Site.Home/Areas/PagesAdmin/Views/Product/Add.cshtml
+++ b/XFramework.Site.Home/Areas/PagesAdmin/Views/Product/Add.cshtml
@@ -51,7 +51,7 @@
             大图：</label>
         <div class="col-sm-11">
             @Html.TextBoxFor(m => m.BImageUrl, new { placeholder = "产品小图", @class = "form-control" })<a
-                href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=SImageUrl',400,100,200);">上传图片</a>
+                href="javascript:openWindow('/Pagesadmin/Home/UploadImage?obj=BImageUrl',400,100,200);">上传图片</a>
         </div>
     </div>
     <div class="form-group">
